@@ -715,24 +715,24 @@ void header::decode(util::codepage_id codepage) {
 	util::to_utf8(app_support_url, codepage);
 	util::to_utf8(app_updates_url, codepage);
 	util::to_utf8(app_version, codepage);
-	util::to_utf8(default_dir_name, codepage);
+	util::to_utf8(default_dir_name, codepage, &lead_bytes);
 	util::to_utf8(default_group_name, codepage);
-	util::to_utf8(base_filename, codepage);
-	util::to_utf8(uninstall_files_dir, codepage);
-	util::to_utf8(uninstall_name, codepage);
-	util::to_utf8(uninstall_icon, codepage);
-	util::to_utf8(app_mutex, codepage);
+	util::to_utf8(base_filename, codepage, &lead_bytes);
+	util::to_utf8(uninstall_files_dir, codepage, &lead_bytes);
+	util::to_utf8(uninstall_name, codepage, &lead_bytes);
+	util::to_utf8(uninstall_icon, codepage, &lead_bytes);
+	util::to_utf8(app_mutex, codepage, &lead_bytes);
 	util::to_utf8(default_user_name, codepage);
 	util::to_utf8(default_user_organisation, codepage);
 	util::to_utf8(default_serial, codepage);
-	util::to_utf8(app_readme_file, codepage);
+	util::to_utf8(app_readme_file, codepage, &lead_bytes);
 	util::to_utf8(app_contact, codepage);
 	util::to_utf8(app_comments, codepage);
-	util::to_utf8(app_modify_path, codepage);
-	util::to_utf8(create_uninstall_registry_key, codepage);
+	util::to_utf8(app_modify_path, codepage, &lead_bytes);
+	util::to_utf8(create_uninstall_registry_key, codepage, &lead_bytes);
 	util::to_utf8(uninstallable, codepage);
 	util::to_utf8(close_applications_filter, codepage);
-	util::to_utf8(setup_mutex, codepage);
+	util::to_utf8(setup_mutex, codepage, &lead_bytes);
 	util::to_utf8(changes_environment, codepage);
 	util::to_utf8(changes_associations, codepage);
 	
