@@ -2,6 +2,7 @@
 innoextract 1.9 (TBD)
  - Fixed output directory being created for unsupported installers
  - Fixed some safe non-ASCII characters being stripped from filenames
+ - Fixed handling of path separators in Japanese and Korean installers
 
 innoextract 1.8 (2019-09-15)
  - Added support for Inno Setup 6.0.0 installers
